adding modals appended

--- a/CMS.Mvc/Areas/Admin/Views/Home/Index.cshtml
+++ b/CMS.Mvc/Areas/Admin/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
                         <ul class="dropdown-menu dropdown-menu-sm text-center" role="menu" aria-labelledby="dropdownmenu" style=" right: 0; left: auto; padding-left: 1px; padding-right: 1px;">
 
                             <li>
-                                <button class="dropdown-item dialog-link" data-href="/content/includes/add.php?type=central" data-title="Yeni Santral Ekle">Yeni Ekle</button>
+                                <button class="dropdown-item dialog-link" data-href="/Admin/Add/Central" data-title="Yeni Santral Ekle">Yeni Ekle</button>
                             </li>
 
                         </ul>
