--- a/CMS.Mvc/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CMS.Mvc/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
             <!--begin::Wrapper-->
             <div class="d-flex flex-column flex-row-fluid wrapper" id="kt_wrapper">
                 @await Html.PartialAsync("_LayoutHeaderPartial")
-                <div class=" container vh-100">
+                <div class=" container">
                     @RenderBody()
                 </div>
                 @await Html.PartialAsync("_LayoutFooterPartial")
