--- a/CMS.Mvc/Areas/Admin/Views/Shared/_LayoutAsidePartial.cshtml
+++ b/CMS.Mvc/Areas/Admin/Views/Shared/_LayoutAsidePartial.cshtml
@@ -90,7 +90,7 @@
                             </li>
                             <li class="menu-item menu-item-submenu" aria-haspopup="true"
                                 data-menu-toggle="hover">
-                                <a href="/content/companies/add/" class="menu-link menu-toggle">
+                                <a asp-area="Admin" asp-controller="Add" asp-action="Company" class="menu-link menu-toggle">
                                     <i class="menu-bullet menu-bullet-dot">
                                         <span></span>
                                     </i>
