--- a/CMS.Mvc/Areas/Admin/Views/Company/Projects.cshtml
+++ b/CMS.Mvc/Areas/Admin/Views/Company/Projects.cshtml
@@ -2,7 +2,7 @@
 @model CMS.Mvc.Areas.Admin.Models.CompanyModel
 
 @section Styles{
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" />
     <link rel="stylesheet" href="~/assets/plugins/simple-line-icons/simple-line-icons.min.css" />
     <link rel="stylesheet" href="~/assets/plugins/bootstrap-switch/css/bootstrap-switch.min.css" />
     <link rel="stylesheet" href="~/assets/css/components-rounded.min.css" />
@@ -19,8 +19,10 @@
                 <!-- Şirket projeleri -->
                 <div class="mt-list-head list-todo red">
                     <div class="list-head-title-container">
-                        <h3 class="list-title">
-                            @Model.Company.Name
+                        <h3 class="list-title load-from-api" api-url="https://localhost:44310/api/Company/@(ViewBag.CompanyId)">
+                            <template>
+                                ${entry.Name}
+                            </template>
                         </h3>
                         <div class="list-head-count">
                             <div class="list-head-count-item text-center">
@@ -32,7 +34,7 @@
                     </div>
                     <!-- Add Project -->
                     <a href="javascript:;">
-                        <div id="addProject" class="list-count pull-right red-mint h-100 dialog-link" data-href="@Url.Action("Project","Add",new { compId = Model.Company.Id })" data-title="Yeni Proje olluştur">
+                        <div id="addProject" class="list-count pull-right red-mint h-100 dialog-link" data-href="@Url.Action("Project","Add",new { compId = ViewBag.CompanyId })" data-title="Yeni Proje olluştur">
                             <i class="fa fa-plus  align-center"></i>
                         </div>
                     </a>
@@ -40,10 +42,11 @@
                 <div class="mt-list-container list-todo" id="accordion1" role="tablist" aria-multiselectable="true">
                     <div class="list-todo-line"></div>
 
-                    <ul class="observable">
-                        @foreach (Project p in Model.Company.Projects)
-                            @await Html.PartialAsync("_ProjectView", p)
-                    </ul>
+                    <ul class="load-from-api" api-url="https://localhost:44310/api/Project/company/@(ViewBag.CompanyId)">
+                        <template>
+                            @await Html.PartialAsync("_ProjectView")
+                        </template>    
+                    </ul>    
                 </div>
             </div>
 
@@ -56,7 +59,7 @@
 @section Scripts{
     <div class="mo-refresh">
         <script src="~/assets/plugins/jQuery-slimScroll-1.3.8/jquery.slimscroll.min.js"></script>
-        <script src="http://malsup.github.io/jquery.blockUI.js"></script>
+        <script src="https://malsup.github.io/jquery.blockUI.js"></script>
         <script src="~/assets/plugins/js.cookie.min.js"></script>
         <script src="~/assets/plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
         <script src="~/assets/js/pages/crud/forms/widgets/bootstrap-selectc3e8.js"></script>
